Fix global image contrast issue

--- a/src/App.css
+++ b/src/App.css
@@ -1701,12 +1701,12 @@ transform-origin: 0 0; /* see note above */
 .team button:hover {
     color: #ea9d28;
 }
-.team, button, img {
+.team, button img {
     filter: contrast(80%);
 }
-.team, button:hover, img:hover {
+.team, button:hover img:hover {
     transition: all 1.2s ease;
-    filter: contrast(120%);
+    filter: contrast(100%);
 }
 .team table {
     table-layout: fixed;
